<resources>
    <string name="app_name">My Fitness App</string>
    <string name="action_settings">Settings</string>
    <string name="timerVal">00:00:00</string>
    <string name="pauseButtonLabel">Pause</string>
    <string name="startButtonLabel">Start</string>
    <string name="enter_location">Enter location...</string>
    <string name="enter_your_location">Enter Your Location</string>
    <string name="zip_code">Location/Zip Code...</string>
    <string name="todo">TODO</string>
    <string name="submit_location">Submit Location</string>
    <string name="activities">SEE ACTIVITIES</string>
    <string name="gyms">SEARCH GYMS</string>
    <string name="gymnasium_name">Gymnasium Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_out_map">Check out Website</string>
    <string name="running_swimming">Running, Swimming</string>
    <string name="search_activities">Search activities</string>
    <string name="tutorials">Search Youtube Tutorials</string>
    <string name="search_for_gyms">Search For Gyms</string>
    <string name="search_for_gymnasiums">Search for Gymnasiums</string>
    <string name="video_name">Video Name</string>
    <string name="gymnasium_category">Gymnasium Category</string>
    <string name="snack_bar_text">restore</string>
    <string name="snack_bar_undo">undo delete</string>
    <string name="rating">Rating</string>
    <string name="there_are_no_videos_to_show_yet_enter_your_search_item_to_show">There are No Videos to Show yet, Enter your search item to show.</string>
    <string name="video_title">Video Title</string>
    <string name="no_such_location_was_found">No such Location was found</string>
    <string name="already_have_an_account_log_in_here">Already have an account? Log in here!</string>
    <string name="description">Description</string>
    <string name="thumbnail">TODO</string>
    <string name="playerbutton">TODO</string>
    <string name="my_flag">My flag</string>
</resources>
