<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.SearchGymsActivity">

    <ImageView
        android:id="@+id/imageForGymSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        android:scaleType="centerCrop"
        android:src="@drawable/searchback"
        android:contentDescription="@string/todo" />


    <TextView
        android:id="@+id/gymTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/enter_your_location"
        android:textAlignment="center"
        android:background="@color/colorButton"
        android:textColor="@color/white"
        android:textSize="40sp"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/gymSearchEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gymTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="100dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:drawableBottom="@color/cardview_dark_background"
        android:hint="@string/zip_code"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="@color/colorButton"
        android:textEditSuggestionItemLayout="@color/white"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/submitGymLocationButton"
        android:layout_below="@+id/gymSearchEditText"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:textColor="@color/white"
        android:text="@string/submit_location" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="My Saved Gymnasiums"
        android:id="@+id/savedGymnasiumsButton"
        android:background="@color/colorButton"
        android:textColor="@color/white"
        android:visibility="visible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="262dp"
        android:layout_marginStart="70dp"
        android:layout_height="277dp"
        android:layout_below="@+id/submitGymLocationButton"
        android:layout_marginTop="17dp"
        android:gravity="center_horizontal"
        app:srcCompat="@android:drawable/ic_menu_mapmode" />




</RelativeLayout>