<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GymnasiumDetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/gymnasiumNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/gymnasium_name"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4.5/5"
                android:id="@+id/ratingTextView"
                android:layout_alignTop="@+id/gymnasiumNameTextView"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/running_swimming"
                android:id="@+id/categoryTextView"
                android:layout_below="@+id/gymnasiumNameTextView"
                android:layout_alignParentStart="true"
                android:textColor="@color/colorAccent"
                android:textStyle="italic" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingTop="20dp"
                android:paddingRight="30dp">
                <ImageView
                    android:id="@+id/gymnasiumImageView"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bolt" />



                <TextView
                    android:id="@+id/websiteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/ic_exit_white"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:text="@string/check_out_map"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/phoneTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/ic_phone_white"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:text="(503) 223-1282"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/addressTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/ic_location_white"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:text="123 SW Best Ever Ave. Portland, Oregon, 97222"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/saveGymnasiumButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="Save Gymnasium"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


            </LinearLayout>


        </RelativeLayout>
    </LinearLayout>

</FrameLayout>